fix: wrap dividing operation with calc() in scss files

--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -107,7 +107,7 @@ html {
 
     .site-favicon {
       display: inline-block;
-      height: $header-height / 1.5;
+      height: calc($header-height / 1.5);
       margin-right: 5px;
     }
   }
@@ -529,7 +529,6 @@ html {
     @include relative-font-size(1.125);
     color: $grey-color;
     line-height: 15px;
-    color: #666;
     max-width: 50%;
   }
 
@@ -696,7 +695,7 @@ html {
   }
 
   @include media-query($on-palm) {
-    height: $banner-height / 1.5;
+    height: calc($banner-height / 1.5);
   }
 }
 
